fuente contenido.css 6-8
Adición de fuente a contenido.css linea 6 a 8

--- a/css/contenido.css
+++ b/css/contenido.css
@@ -3,6 +3,9 @@
 	margin: auto;
 	overflow: hidden;
 }
+.*{
+	font-family: "angsana_newregular",normal !important;
+}
 
 .slider ul {
 	display: flex;
